# rpi_nomad_cluster

./: .gitignore  README.md  encrypt_pass.sh  generate_hashi_ssh_keys.sh  pyproject.toml  requirements.txt  validate_conf.sh
ansible/: .gitignore  ansible.cfg
ansible/inventories/onboard/: inventory.example.yml
ansible/inventories/onboard/group_vars/: all.example.yml
ansible/inventories/rpi-nomad-cluster/: inventory.example.yaml
ansible/inventories/rpi-nomad-cluster/group_vars/: all.example.yml
ansible/plays/: arch.yml
ansible/plays/configure/: configure-git.yml  configure-zswap.yml
ansible/plays/installs/: install-cni-plugins  install-docker.yml  install-docker_and_compose.yml  install-hashi-up.yml  install-pipx.yml  install-pyenv.yml  install-tailscale.yml
ansible/plays/maint/: reboot-system.yml  remove-snaps.yml  update-system.yml
ansible/plays/security/: configure-firewall.yml  configure-hashi-ssh.yml  configure-hashicorp-apps-firewall.yml  configure-ssh.yml
ansible/plays/setup/: base-setup.yml
ansible/plays/uninstalls/: uninstall-all-hashi-apps.yml  uninstall-consul.yml  uninstall-nomad.yml  uninstall-pyenv.yml
ansible/roles/common/configure-git/defaults/: main.yml
ansible/roles/common/configure-zswap/tasks/: main.yml
ansible/roles/common/configure-zswap/tests/: test.yml
ansible/roles/common/install-default-packages/tasks/: install-packages_rpi_debian-family.yml
ansible/roles/common/install-default-packages/tests/: test.yml
ansible/roles/common/install-docker/tasks/: install-docker-compose.yml  main.yml  post-install.yml
ansible/roles/common/install-pipx/handlers/: main.yml
ansible/roles/common/install-pipx/tasks/: install-pipx.yml  main.yml  upgrade-pipx.yml
ansible/roles/common/install-pipx/vars/: main.yml
ansible/roles/common/install-pyenv/defaults/: main.yml
ansible/roles/common/install-pyenv/tasks/: configure-env.yml  install-dependencies.yml  main.yml  pyenv-global-python.yml
ansible/roles/common/install-tailscale/handlers/: main.yml
ansible/roles/common/install-tailscale/tasks/: install-tailscale_debian-family.yml  main.yml
ansible/roles/common/install-tailscale/vars/: main.yml
ansible/roles/common/install-tmux/defaults/: main.yml
ansible/roles/common/install-tmux/handlers/: main.yml
ansible/roles/common/install-tmux/tests/: test.yml
ansible/roles/common/install-tmux/vars/: main.yml
ansible/roles/common/install/install-cni-plugins/: README.md
ansible/roles/common/remove-snaps/tasks/: main.yml
ansible/roles/common/remove-snaps/tests/: test.yml
ansible/roles/common/remove-snaps/vars/: main.yml
ansible/roles/common/update-system/defaults/: main.yml
pi_cluster/: constants.py  dependencies.py  main.py  main_old.py  test.py  test_execute.py
pi_cluster/domain/ssh/: __init__.py  schemas.py
pi_cluster/domain/template/: __init__.py  base_schemas.py  schemas.py
pi_cluster/domain/template/nomad_jobs/: __init__.py  schemas.py
pi_cluster/reference_files/: cmdline.txt  meta-data  network-config  user-data
pi_cluster/templates/hashi-up/agent/: hashi-up-agent_consul.j2  hashi-up-agent_nomad.j2
pi_cluster/templates/hashi-up/server/: hashi-up-server_consul.j2  hashi-up-server_nomad.j2
pi_cluster/templates/nomad_jobs/: nextcloud.nomad.j2  traefik.nomad.j2
pi_cluster/templates/snippets/: tmpl_meta-data.j2  tmpl_network-config.j2  tmpl_user-data.j2
pi_cluster/utils/jinja_utils/: __init__.py  operations.py
pi_cluster/utils/shell_utils/: __init__.py  operations.py
pi_cluster/utils/system_utils/: __init__.py  operations.py
(+129 files in other folders)
