
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "jackenyon@gmail.com"},
]
dependencies = [
    "ansible>=8.1.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.276",
    "pytest>=7.4.0",
]

[tool.pdm.scripts]
start = { shell = "cd pi_cluster && pdm run python main.py" }

## Run git branch prune, delete local branches that have been removed from remote
git-prune.shell = "./prune_branches.sh"

update-cluster.shell = "cd ansible && pdm run ansible-playbook -i inventories/rpi-nomad-cluster/inventory.yaml plays/maint/update-system.yml --limit autoReboot"

## Prompt for new role path, cd to ansible/ & create role
#  Note: Path should be relative to ansible/ dir
new-role.shell = "read -p 'New role path (i.e. roles/common/new-role): ' role_path && cd ansible && pdm run ansible-galaxy init ${role_path}"

## Run the base setup playbook against the cluster.
#  Note: SSH must be configured on the remote machines before using this.
#  You should also have edited the inventory.yml file in inventories/rpi-nomad-cluster
ansible-base-setup.cmd = "ansible-playbook -i ansible/inventories/rpi-nomad-cluster/inventory.yaml ansible/plays/setup/base-setup.yml"
